--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "framer-motion": "^10.12.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
